# procedural-terrain

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: linux.yml  windows.yml
labhelper/: CMakeLists.txt  Model.cpp  Model.h  imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h  labhelper.cpp  labhelper.h
project/: CMakeLists.txt  ParticleSystem.cpp  ParticleSystem.h  background.frag  fbo.cpp  fbo.h  hdr.h  heightfield.cpp  heightfield.h  main.cpp  shading.frag  terrain.cpp  terrain.frag  terrain.h  terrain.tcs  terrain.tes
resources/models/: BigSphere.mtl  SConscript  Wheatley_License.txt  city.mtl  landingpad2.mtl  tetra_balls.mtl  wheatley.mtl
resources/models/nlsFinland/: copyright.txt  readme.txt
resources/models/shrek/: Shrek.mtl
resources/shaders/: background.frag  background.vert  debug.frag  debug.vert  fxaa.glsl  heightfield.frag  heightfield.vert  noise.glsl  particle.frag  particle.vert  pbr.glsl  postfx.frag  postfx.vert  shading.frag  shading.vert  simple.frag  simple.vert  sun.glsl  terrain.frag  terrain.tcs  terrain.tes  terrain.vert  terrain_simple.frag  utils.glsl  water.frag  water.vert
resources/textures/: toon_stone.smpx
resources/textures/terrain/beach/: tdsmeeko.json
resources/textures/terrain/grass/: vb2mdatlw.json
resources/textures/terrain/rock_beach/: ulmiccvlw.json
resources/textures/terrain/snow/: vcqnfdk.json
scenes/: NewShip.mtl  materialtest.mtl
src/: camera.h  core.h  debug.h  fbo.cpp  fbo.h  gpu.cpp  gpu.h  hdr.cpp  hdr.h  heightfield.cpp  heightfield.h  main.cpp  model.cpp  model.h  postfx.h  shader.h  shadowmap.cpp  shadowmap.h  terrain.cpp  terrain.h  water.h
